Fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
 
 html, body{
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .wrapper{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .header{
